--- a/doc/main.tex
+++ b/doc/main.tex
@@ -47,6 +47,6 @@
 
 \section{Elliptic equations and the finite element method}
 
-\input{1_section/1.tex}
+\input{1_elliptic/exercises.tex}
 
 \end{document}
