--- a/doc/2_sobolev/exercises.tex
+++ b/doc/2_sobolev/exercises.tex
@@ -198,28 +198,86 @@
 \end{exercise}
 
 \begin{solution}
-    I'm beginning to start to regret not doing in generally in the first place\dots
-    Without further ado, lets compute the $L^2$ norm of $u$ analytically.
+    Equivalently, we can write $u$ as
+    \begin{equation*}
+        u =
+        \begin{cases}
+            1, & x = \frac{1}{2}, \\
+            \frac{1}{h} x - \frac{1}{h} \left( \frac{1}{2} - h \right), & x \in \left( \frac{1}{2} - h, \frac{1}{2} \right), \\
+            -\frac{1}{h} x + \frac{1}{h} \left( \frac{1}{2} - h \right), & x \in \left( \frac{1}{2}, \frac{1}{2} + h \right), \\
+            0, & \text{otherwise}.
+        \end{cases}
+    \end{equation*}
+    We begin by computing the $L^2$ norm of $u$ analytically.
     \begin{align*}
         \lVert u \rVert_2 &= \left( \int_{0}^{1} u^2 \ dx \right)^{1/2} \\
-        &= \left( \int_{0.5 - h}^{0.5} \left( \frac{1}{h} x - \frac{1}{h} (0.5 - h) \right)^2 \ dx + \int_{0.5}^{0.5 + h} \left( -\frac{1}{h} x + \frac{1}{h} (0.5 - h) \right)^2 \ dx \right)^{1/2} \\
+        &= \left( \int_{\frac{1}{2} - h}^{\frac{1}{2}} \left( \frac{1}{h} x - \frac{1}{h} (\frac{1}{2} - h) \right)^2 \ dx + \int_{\frac{1}{2}}^{\frac{1}{2} + h} \left( -\frac{1}{h} x + \frac{1}{h} (\frac{1}{2} - h) \right)^2 \ dx \right)^{1/2} \\
         &= \left(
-            2 \int_{0.5 - h}^{0.5} \left( \frac{1}{h} x - \frac{1}{h} (0.5 - h) \right)^2 \ dx
+            2 \int_{\frac{1}{2} - h}^{\frac{1}{2}} \left( \frac{1}{h} x - \frac{1}{h} (\frac{1}{2} - h) \right)^2 \ dx
         \right)^{1/2} \\
         &= \left(
-            \frac{2}{h^2} \int_{0.5 - h}^{0.5} x^2 - 2x(0.5 - h) + (0.5 - h)^2 \ dx
+            \frac{2}{h^2} \int_{\frac{1}{2} - h}^{\frac{1}{2}} x^2 - 2x(\frac{1}{2} - h) + (\frac{1}{2} - h)^2 \ dx
         \right)^{1/2} \\
         &= \left(
-            \frac{2}{h^2} \left[ \frac{1}{3} x^3 - (0.5 - h) x^2 + (0.5 - h)^2 x \right]_{0.5 - h}^{0.5}
+            \frac{2}{h^2} \left[ \frac{1}{3} x^3 - (\frac{1}{2} - h) x^2 + (\frac{1}{2} - h)^2 x \right]_{\frac{1}{2} - h}^{\frac{1}{2}}
         \right)^{1/2} \\
-        &= \left(
-            \frac{2}{h^2} \left( \frac{1}{3} \cdot 0.125 - (0.5 - h) \cdot 0.25 + (0.5 - h)^2 \cdot 0.5 \right)
-        \right)^{1/2} \\
-        &= \left(
-            \frac{2}{h^2} \left( \frac{1}{24} - 0.125(0.5 - h) + 0.25(0.5 - h)^2 \right)
-        \right)^{1/2} \\
-        &= \left(
-            \frac{2}{h^2} \left( \frac{1}{24} - 0.125 \cdot 0.5 + 0.25 \cdot 0.25 \right)
-        \right)^{1/2} \\
+        &= \frac{\sqrt{2}}{h} \Bigg(
+            \left[
+                \frac{1}{3} \cdot \frac{1}{8}
+                - (\frac{1}{2} - h) \cdot \frac{1}{4}
+                + (\frac{1}{2} - h)^2 \cdot \frac{1}{2}
+            \right] \\
+            &\quad - \left[
+                \frac{1}{3} \cdot \left( \frac{1}{2} - h \right)^3
+                - (\frac{1}{2} - h) \cdot \left( \frac{1}{2} - h \right)^2
+                + (\frac{1}{2} - h)^2 \cdot \left( \frac{1}{2} - h \right)
+            \right]
+        \Bigg)^{1/2} \\
+        &= \frac{\sqrt{2}}{h}\left(
+            \frac{1}{24}
+            - \frac{1}{8} + \frac{h}{4}
+            + \frac{1}{8} - \frac{h}{2} + \frac{h^2}{2}
+            - \frac{1}{3} \left( \frac{1}{2} - h \right)^3
+        \right)^{1/2}
     \end{align*}
+
+    % I'm beginning to start to regret not doing in generally in the first place\dots
+    % Without further ado, lets compute the $L^2$ norm of $u$ analytically.
+    % \begin{align*}
+    %     \lVert u \rVert_2 &= \left( \int_{0}^{1} u^2 \ dx \right)^{1/2} \\
+    %     &= \left( \int_{0.5 - h}^{0.5} \left( \frac{1}{h} x - \frac{1}{h} (0.5 - h) \right)^2 \ dx + \int_{0.5}^{0.5 + h} \left( -\frac{1}{h} x + \frac{1}{h} (0.5 - h) \right)^2 \ dx \right)^{1/2} \\
+    %     &= \left(
+    %         2 \int_{0.5 - h}^{0.5} \left( \frac{1}{h} x - \frac{1}{h} (0.5 - h) \right)^2 \ dx
+    %     \right)^{1/2} \\
+    %     &= \left(
+    %         \frac{2}{h^2} \int_{0.5 - h}^{0.5} x^2 - 2x(0.5 - h) + (0.5 - h)^2 \ dx
+    %     \right)^{1/2} \\
+    %     &= \left(
+    %         \frac{2}{h^2} \left[ \frac{1}{3} x^3 - (0.5 - h) x^2 + (0.5 - h)^2 x \right]_{0.5 - h}^{0.5}
+    %     \right)^{1/2} \\
+    %     &= \left(
+    %         \frac{2}{h^2} \left( \frac{1}{3} \cdot 0.125 - (0.5 - h) \cdot 0.25 + (0.5 - h)^2 \cdot 0.5 \right)
+    %     \right)^{1/2} \\
+    %     &= \left(
+    %         \frac{2}{h^2} \left( \frac{1}{24} - 0.125(0.5 - h) + 0.25(0.5 - h)^2 \right)
+    %     \right)^{1/2} \\
+    %     &= \left(
+    %         \frac{2}{h^2} \left( \frac{1}{24} - 0.125 \cdot 0.5 + 0.25 \cdot 0.25 \right)
+    %     \right)^{1/2} \\
+    % \end{align*}
+    Opting to instead use Wolfram Alpha to solve the integral, we find that
+    \begin{equation*}
+        \lVert u \rVert_2 = \sqrt{\frac{2h}{3}}.
+    \end{equation*}
+    The $H^1$ semi-norm is hopefully simpler to compute, and is given by
+    \begin{align*}
+        \lvert u \rvert_1 &= \left( \int_{0}^{1} \left( \frac{\partial u}{\partial x} \right)^2 \ dx \right)^{1/2} \\
+        &= \left( \int_{0.5 - h}^{0.5} \frac{1}{h^2} \ dx + \int_{0.5}^{0.5 + h} \frac{1}{h^2} \ dx \right)^{1/2} \\
+        &= \left( \frac{1}{h^2} \left( 0.5 - (0.5 - h) \right) + \frac{1}{h^2} \left( 0.5 + h - 0.5 \right) \right)^{1/2} \\
+        &= \left( \frac{2h}{h^2} \right)^{1/2} = \sqrt{\frac{2}{h}}.
+    \end{align*}
+    This gives us the $H^1$ norm as
+    \begin{equation*}
+        \lVert u \rVert_1 = \sqrt{\frac{2}{h} + \frac{2h}{3}} = \sqrt{\frac{6 + 2h^2}{3h}}.
+    \end{equation*}
 \end{solution}
