--- a/doc/2_sobolev/exercises.tex
+++ b/doc/2_sobolev/exercises.tex
@@ -32,7 +32,7 @@
     \begin{align*}
         \lVert u + v \rVert_p^p &= \int_{0}^{1} \lvert u + v \rvert^p \ dx \\
         &\leq \int_{0}^{1} \left( \lvert u \rvert + \lvert v \rvert \right)^p \ dx \\
-        &\leq \int_{0}^{1} \lvert u \rvert^p + \lvert v \rvert^p \ dx \\
+        &\leq \int_{0}^{1} \lvert u \rvert^p + \lvert v \rvert^p \ dx \quad \textcolor{red}{\text{This is shady}} \\
         &= \lVert u \rVert_p^p + \lVert v \rVert_p^p,
     \end{align*}
     which implies
